--- a/dao/product-api/src/main/resources/application.properties
+++ b/dao/product-api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/items
 server.port=8080
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/product_api?createDatabaseIfNotExist=true&serverTimezone=UTC
