--- a/dao/customer-api/src/main/resources/application.properties
+++ b/dao/customer-api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/customer_api?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.data.jpa.repositories.enabled=true
+spring.datasource.initialization-mode=always
 
