--- a/dao/customer-api/src/main/resources/application.properties
+++ b/dao/customer-api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.servlet.context-path=/db/customer
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/customer_api?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
