--- a/front/al-geek-front/pom.xml
+++ b/front/al-geek-front/pom.xml
@@ -86,10 +86,16 @@
 			<artifactId>all-themes</artifactId>
 			<version>1.0.10</version>
 		</dependency>
-		
+
 		<dependency>
 		    <groupId>fr.afcepf.algeek</groupId>
 			<artifactId>al-geek-dto</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>fr.afcepf.algeek</groupId>
+			<artifactId>al-geek-rest</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
