--- a/gateway/api-gateway/pom.xml
+++ b/gateway/api-gateway/pom.xml
@@ -37,6 +37,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>fr.afcepf.algeek</groupId>
+			<artifactId>al-geek-rest</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
