--- a/business/product-manager/pom.xml
+++ b/business/product-manager/pom.xml
@@ -35,6 +35,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>fr.afcepf.algeek</groupId>
+			<artifactId>al-geek-rest</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
