--- a/dao/product-api/pom.xml
+++ b/dao/product-api/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>al-geek-dto</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+        <dependency>
+            <groupId>fr.afcepf.algeek</groupId>
+            <artifactId>al-geek-rest</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
