Mise à jour de la dépendance sur al-geek-rest en 1.1. Mise à jour des urls des WS sur la partie ProduitService et ClientService. Ajout de paramètre d'environnement dans le fichier de properties. Adaptation partielle des BEans aux nouveaux DTOs. Ref. #2

--- a/front/al-geek-front/src/main/resources/application.properties
+++ b/front/al-geek-front/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.org=INFO
 #spring.data.jpa.repositories.enabled=true
 
 #spring.datasource.initialization-mode=always
+
+algeek.gateway.address=${GW_HOSTNAME:127.0.0.1}:${GW_PORT:10000}
