--- a/front/al-geek-front/src/main/resources/application.properties
+++ b/front/al-geek-front/src/main/resources/application.properties
@@ -2,16 +2,4 @@ server.servlet.context-path=/algeekv2
 server.port=8080
 logging.level.org=INFO
 
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/al_projet?createDatabaseIfNotExist=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
-#spring.jpa.hibernate.ddl-auto=create-drop
-
-#spring.data.jpa.repositories.enabled=true
-
-#spring.datasource.initialization-mode=always
-
-algeek.gateway.address=${GW_HOSTNAME:127.0.0.1}:${GW_PORT:10000}
+algeek.gateway.address=http://${GW_HOSTNAME:127.0.0.1}:${GW_PORT:10000}/gateway
