--- a/gateway/api-gateway/src/main/resources/application.properties
+++ b/gateway/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.servlet.context-path=/gateway
 server.port=${GW_PORT:10000}
 
-algeek.manager.customer.address=${CUSTOMER_MGR_HOSTNAME:127.0.0.1}:${CUSTOMER_MGR_PORT:9001}
-algeek.manager.order.address=${ORDER_MGR_HOSTNAME:127.0.0.1}:${ORDER_MGR_PORT:9002}
-algeek.manager.product.address=${PRODUCT_MGR_HOSTNAME:127.0.0.1}:${PRODUCT_MGR_PORT:9003}
-algeek.manager.sales.address=${SALES_MGR_HOSTNAME:127.0.0.1}:${SALES_MGR_PORT:9004}
-algeek.manager.stock.address=${STOCK_MGR_HOSTNAME:127.0.0.1}:${SSTOCK_MGR_PORT:9005}
+algeek.manager.customer.address=http://${CUSTOMER_MGR_HOSTNAME:127.0.0.1}:${CUSTOMER_MGR_PORT:9001}/manager/customer
+algeek.manager.order.address=http://${ORDER_MGR_HOSTNAME:127.0.0.1}:${ORDER_MGR_PORT:9002}/manager/order
+algeek.manager.product.address=http://${PRODUCT_MGR_HOSTNAME:127.0.0.1}:${PRODUCT_MGR_PORT:8180}/manager/product
+algeek.manager.sales.address=http://${SALES_MGR_HOSTNAME:127.0.0.1}:${SALES_MGR_PORT:9004}/manager/sales
+algeek.manager.stock.address=http://${STOCK_MGR_HOSTNAME:127.0.0.1}:${SSTOCK_MGR_PORT:9005}/manager/stock
