test sur application properties pour integration

--- a/business/product-manager/src/main/resources/application.properties
+++ b/business/product-manager/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.servlet.context-path=/manager/product
 server.port=${PM_PORT:8180}
 
-algeek.db.product.address=http://${PRODUCT_API_HOSTNAME:127.0.0.1}:${PRODUCT_API_PORT:8180}/db/product
+algeek.db.product.address=http://${PRODUCT_API_HOSTNAME:127.0.0.1:8080}/db/product
