Ajustement de la configuration. Ref. #14

--- a/business/sales-orchestrator/src/main/resources/application.properties
+++ b/business/sales-orchestrator/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/manager/sales
-server.port=${SALES_MGR_PORT:9005}
+server.port=${SALES_MGR_PORT:8580}
 
-algeek.manager.order.address=${ORDER_MGR_HOSTNAME:127.0.0.1}:${ORDER_MGR_PORT:9002}/manager/order
-algeek.manager.product.address=${PRODUCT_MGR_HOSTNAME:127.0.0.1}:${PRODUCT_MGR_PORT:9003}/manager/product
+algeek.manager.order.address=${ORDER_MGR_ADDRESS:127.0.0.1:8280}/manager/order
+algeek.manager.product.address=${PRODUCT_MGR_ADDRESS:http://127.0.0.1:8180}/manager/product
 
 
