Ajustement de la configuration. Ref. #14

--- a/business/customer-manager/src/main/resources/application.properties
+++ b/business/customer-manager/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-server.port=8180
+server.port=${CUST_PORT:8280}
 server.servlet.context-path=/manager/customer
+
+algeek.db.customer.address=${CUSTOMER_MGR_ADDRESS:http://127.0.0.1:8080}/db/customer
