--- a/dao/product-api/src/main/resources/application.properties
+++ b/dao/product-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/db/product
 server.port=8080
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:127.0.0.1}:${RDS_PORT:3306}/${RDS_DB_NAME:product_api}?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:127.0.0.1}:${RDS_PORT:3306}/${RDS_DB_NAME:product_api}?createDatabaseIfNotExist=true&serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=${RDS_USERNAME:root}
 spring.datasource.password=${RDS_PASSWORD:root}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
