Ajustement de la configuration. Ref. #14

--- a/dao/customer-api/src/main/resources/application.properties
+++ b/dao/customer-api/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=${CA_PORT:8080}
 server.servlet.context-path=/db/customer
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:127.0.0.1}:${RDS_PORT:3306}/${RDS_DB_NAME:customer_api}?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD:root}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.data.jpa.repositories.enabled=true
