manager + dao ok avec variables d'environnement

--- a/business/order-manager/src/main/resources/application.properties
+++ b/business/order-manager/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.servlet.context-path=/manager/order
-server.port=8280
+server.port=${ORDER_POST:8280}
 
+algeek.db.order.address=${ORDER_API_ADDRESS:http://127.0.0.1:8080}/db/order
