--- a/dao/order-api/src/main/resources/application.properties
+++ b/dao/order-api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.servlet.context-path=/db/order
-server.port=8080
+server.port=${OA_PORT:8080}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/order_api?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:127.0.0.1}:${RDS_PORT:3306}/${RDS_DB_NAME:order_api}?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD:root}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.data.jpa.repositories.enabled=true
