Ajustement de la configuration. Ref. #14

--- a/front/al-geek-front/src/main/resources/application.properties
+++ b/front/al-geek-front/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.servlet.context-path=/algeekv2
-server.port=8080
+server.port=${FRONT_PORT:80}
 logging.level.org=INFO
 
-algeek.gateway.address=http://${GW_HOSTNAME:127.0.0.1}:${GW_PORT:10000}/gateway
+algeek.gateway.address=${API_GATEWAY_ADDRESS:http://127.0.0.1:10000}/gateway
