--- a/front/al-geek-front/pom.xml
+++ b/front/al-geek-front/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>fr.afcepf.algeek</groupId>
@@ -41,10 +41,6 @@
 	</repositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -62,6 +58,26 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<!-- utile pour class WelcomePageRedirect implements WebMvcConfigurer
+			     et pour event WS REST -->
 		</dependency>
 
 		<dependency>
@@ -88,7 +104,7 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>fr.afcepf.algeek</groupId>
+			<groupId>fr.afcepf.algeek</groupId>
 			<artifactId>al-geek-dto</artifactId>
 			<version>1.1-SNAPSHOT</version>
 		</dependency>
@@ -99,17 +115,6 @@
 			<version>1.2-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -120,16 +125,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
-
-
-
-
-	<!--<dependencies>
-
-
-
-	</dependencies>-->
 
 </project>
