--- a/libraries/al-geek-rest/pom.xml
+++ b/libraries/al-geek-rest/pom.xml
@@ -9,7 +9,8 @@
     <version>1.2-SNAPSHOT</version>
 
     <properties>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
