--- a/jenkins/order/Jenkinsfile
+++ b/jenkins/order/Jenkinsfile
@@ -67,7 +67,7 @@ pipeline {
 						sshTransfer(
 							execCommand: '''
 								cd order;
-								sudo docker build -t order-img;
+								sudo docker build -t order-img .;
 								sudo docker run -d --name order-cont --env-file env.order -p 8280:8280 -p 8080:8080 order-img;
 								ls -l /home/ec2-user/order;
 							'''
