--- a/front/back-office-angular/package.json
+++ b/front/back-office-angular/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "aws-amplify": "^3.3.1",
     "bootstrap": "^3.4.1",
+    "chart.js": "^2.9.3",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
