correctif get meteo

--- a/front/al-geek-front/src/main/resources/application.properties
+++ b/front/al-geek-front/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.servlet.context-path=/algeekv2
 server.port=${FRONT_PORT:80}
-logging.level.org=INFO
+logging.level.org=DEBUG
 
 algeek.gateway.address=${API_GATEWAY_ADDRESS:http://127.0.0.1:10000}/gateway
